# simulation_irc

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: diff_drive_controller.yaml
launch/: irc.launch.py  spawn_robot.launch.py
models/irc_table/: model.config  model.sdf
models/irc_table/meshes/: irc_stage.dae  irc_stage.stl
models/irc_table/meshs/: irc_stage.dae  irc_stage.stl
models/robot/: model.config  model.sdf
urdf/: simple_robot.urdf.xacro
worlds/: empty_world.world  irc.world
