<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_irc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kouki-abc-1108@outlook.jp">kouki</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>ros2_control</depend>
  <depend>hardware_interface</depend>
  <depend>xacro</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
